--- a/Scripts/Supplements.Rmd
+++ b/Scripts/Supplements.Rmd
@@ -106,7 +106,10 @@ The index was smoothed to a 10-year average to reduce interannual variability [@
 
 _**Calculating shifts in the shared distribution of transboundary stocks**_
 
-Knowing the point in time at which the distribution of a shared stock will diverge from historical variability is important to inform decision makers by when, ideally, climate adaptation plans will need to have been implemented [@Link:2010ei]. To that end, we adopted the concept of time of emergence, commonly applied to multiple oceanic physical and biogeochemical variables [@Rodgers:2015jq; @Keller:2014jv; @Cheung:2020ja; @Schlunegger:2020gz; @Schlunegger:2019el; @Henson:2017ev] and defined as the moment in time when a signal (e.g., future anthropogenic trend) emerges from the background noise of natural variability (i.e., historical natural variation) [@Hawkins:2012hc]. The premise behind time of emergence is that we can only be confident that a significant change has been detected when the signal of anthropogenic climate change is larger than the background noise of natural climate variability [@Hawkins:2012hc]. The TI’s natural internal variability was estimated from 1951 to 2005 ($TI_\sigma$) across ensemble members, and the TI signal represents the average TI across ensemble members from 2006 to 2100 ($TI_\mu$). We then set a threshold of two times $TI_\sigma$ representing a probability of 95% that the transboundary index has “emerged” from historical variability (See Fig. \@ref(fig:toeFigure1) for a graphical description):
+Knowing the point in time at which the distribution of a shared stock will diverge from historical variability is important to inform decision makers by when, ideally, climate adaptation plans will need to have been implemented [@Link:2010ei]. To that end, we adopted the concept of time of emergence, commonly applied to multiple oceanic physical and biogeochemical variables [@Rodgers:2015jq; @Keller:2014jv; @Cheung:2020ja; @Schlunegger:2020gz; @Schlunegger:2019el; @Henson:2017ev] and defined as the moment in time when a signal (e.g., future anthropogenic trend) emerges from the background noise of natural variability (i.e., historical natural variation) [@Hawkins:2012hc]. The premise behind time of emergence is that we can only be confident that a significant change has been detected when the signal of anthropogenic climate change is larger than the background noise of natural climate variability [@Hawkins:2012hc]. **The TI’s natural internal variability was estimated from the ensemble members by firstly averaging the TI from 1951 to 2005 and then estimating the variation ($TI_\sigma$) across ensemble members.**
+
+
+The TI signal represents the average TI across ensemble members from 2006 to 2100 ($TI_\mu$). We then set a threshold of two times $TI_\sigma$ representing a probability of 95% that the transboundary index has “emerged” from historical variability (See Fig. \@ref(fig:toeFigure1) for a graphical description):
 
 
 <!-- $EmergenceTIndex = \frac{\mu_{TI[t]}}{SD_{TI_{th}}}$ -->
@@ -117,7 +120,11 @@ Knowing the point in time at which the distribution of a shared stock will diver
 ToE = TI_\mu[t']>2* TI_\sigma 
 \end{equation}
 
-Thus, we define a shift in a stock’s shared distribution (i.e., time of emergence) as the first year the TI “emerges” from historical internal variability (*t’*). It assumes that, from a fisheries’ perspective, the first year a stock’s distribution shift from a 10-year average is sufficient to call for caution. The ToE was also computed for a less conservative estimation using a threshold of one standard deviation (i.e., representing a probability of 68% that the index has emerged). In this case, the global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27 years, a difference of about 7 years (Fig. \@ref(fig:toeFigureS8)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)).
+Thus, we define a shift in a stock’s shared distribution (i.e., time of emergence) as the first year the TI “emerges” from historical internal variability (*t’*). It assumes that, from a fisheries’ perspective, the first year a stock’s distribution shift from a 10-year average is sufficient to call for caution.
+
+**Since the ToE method is sensitive to the noise estimate (i.e., natural variability) [@Reference?], we conducted sensitivity analysis where we first calculated the standard deviation across the 10 ensemble members for each year between 1951 to 2005 and the calculating the average over 1950-2005 [@Reference?]. Results show that the alternative method estimates 1139 more emerging stocks than the original (5,258 stocks vs 4,119 of the original method), an it also estimates an overall latter ToE (2057 vs 2036 of the original method). The earlier and latter ToE remains the same, and the number of EEZs with emerging stocks slightly increases.**
+
+The ToE was also computed for a less conservative estimation using a threshold of one standard deviation (i.e., representing a probability of 68% that the index has emerged). In this case, the global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27 years, a difference of about 7 years (Fig. \@ref(fig:toeFigureS8)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)).
 
 
 _**Quantifying the intensity of transboundary stocks’ range shift**_
